# esgf-vocab-backend

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  api_routes.md  pyproject.toml
.github/workflows/: docker-publish.yml  pr_test.yml  unit_tests.yml
deployment/: Dockerfile  benchmark.yml  check_update.sh  compose.yaml  haproxy.cfg
src/esgvoc_backend/: __init__.py  app.py  cache.py  constants.py  cross.py  drs.py  index.py  jsg.py  naming.py  projects.py  search.py  start.py  universe.py  update.py  uris.py  utils.py  validation.py
tests/: __init__.py  api_inputs.py  conftest.py  test_cross_api.py  test_drs_generator_api.py  test_drs_validator_api.py  test_js_generator.py  test_projects_api.py  test_search_api.py  test_universe_api.py  test_uris.py  test_validation_api.py  utils.py
