######## PROJECT ########

[project]
name = "esgvoc-backend"
dynamic = ["version"]
description = "Python backend for the library ESGVOC"
authors = [
    {name = "Sébastien Gardoll", email = "sebastien@gardoll.fr"},
    {name = "Guillaume Levavasseur", email = "guillaume.levavasseur@ipsl.fr"},
    {name = "Laurent Troussellier", email = "laurent.troussellier@ipsl.fr"},
]
license = "CECILL-2.1"

dependencies = [
    "esgvoc @ git+https://github.com/ESGF/esgf-vocab@fts",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
]
readme = "README.md"
requires-python = ">= 3.12, <3.13"

[build-system]
requires = ["hatchling==1.26.3"]
build-backend = "hatchling.build"

[project.urls]
Repository = "https://github.com/ESPRI-Mod/esgf-vocab-backend"

######## TOOLS ########

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.13.0",
    "pre-commit>=4.1.0",
    "ruff>=0.9.4",
    "pytest>=8.3.4",
    "httpx>=0.28.1",
    "hatch>=1.14.0", # Required for version updating through rye.
    "pytest-cov>=6.0.0",
    "wily>=1.25.0",
    "flake8>=7.1.2",
    "pyright>=1.1.396",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"

[tool.rye.scripts]
server.call = "esgvoc_backend.start:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/esgvoc_backend"]

[tool.hatch.version]
path = "src/esgvoc_backend/__init__.py"

[tool.mypy]
exclude = ['^tmp.*\.py']
follow_untyped_imports = true

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
extend-select = ["W", "S", "I", "B"]
