######## PROJECT ########

[project]
name = "esgvoc-backend"
dynamic = ["version"]
description = "Python backend for the library ESGVOC"
authors = [
    {name = "Sébastien Gardoll", email = "sebastien@gardoll.fr"},
    {name = "Guillaume Levavasseur", email = "guillaume.levavasseur@ipsl.fr"},
    {name = "Laurent Troussellier", email = "laurent.troussellier@ipsl.fr"},
]
license = "CECILL-2.1"

dependencies = [
    "esgvoc @ git+https://github.com/ESGF/esgf-vocab@integration",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling==1.26.3"]
build-backend = "hatchling.build"

[project.urls]
Repository = "https://github.com/ESPRI-Mod/esgf-vocab-backend"

######## TOOLS ########

[tool.uv]
managed = true
default-groups = "all"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.1.0",
    "ruff>=0.11.0",
    "pytest>=8.3.4",
    "httpx>=0.28.1",
    "hatch>=1.14.0", # Required for version updating through uv.
    "pytest-cov>=6.0.0",
    "wily>=1.25.0",
    "flake8>=7.1.2",
    "pyright>=1.1.396",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/esgvoc_backend"]

[tool.hatch.version]
path = "src/esgvoc_backend/__init__.py"

[tool.mypy]
exclude = ['^tmp.*\.py']
follow_untyped_imports = true

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
extend-select = ["W", "S", "I", "B"]

[tool.ruff.per-file-ignores]
"tests/**" = ['S101', 'F811']
